--- a/_config.yml
+++ b/_config.yml
@@ -24,6 +24,8 @@ url: "" # the base hostname & protocol for your site, e.g. http://example.com
 # twitter_username: jekyllrb
 github_username: jason23347
 
+show_excerpts: true
+
 # Build settings
 markdown: kramdown
 theme: minima
