Switch jekyll to hexo

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,9 @@
-_site
-_scripts
-.sass-cache
-.jekyll-metadata
+.vscode
+.DS_Store
+Thumbs.db
+db.json
+*.log
+node_modules/
+public/
+.deploy*/
+deploy*
