--- a/_config.yml
+++ b/_config.yml
@@ -1,45 +1,89 @@
-# Welcome to Jekyll!
-#
-# This config file is meant for settings that affect your whole blog, values
-# which you are expected to set up once and rarely edit after that. If you find
-# yourself editing this file very often, consider using Jekyll's data files
-# feature for the data you need to update frequently.
-#
-# For technical reasons, this file is *NOT* reloaded automatically when you use
-# 'bundle exec jekyll serve'. If you change this file, please restart the server process.
-
-# Site settings
-# These are used to personalize your new site. If you look in the HTML files,
-# you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
-# You can create any custom variable you would like, and they will be accessible
-# in the templates via {{ site.myvariable }}.
-title: Jason's Simple Blog
-email: jason@jason233.top
-description: >- # this means to ignore newlines until "baseurl:"
+title: "Jason's Simple Blog"
+description: |
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
-# twitter_username: jekyllrb
-github_username: jason23347
+author: 'Jason23347'
+sidebar-avatar: //gravatar.com/avatar/fdaf3db072f81d12d1a1d8edb8b269ab?s=100
+language: zh
+timezone: 'asia/shanghai'
+auto_spacing: true
 
-show_excerpts: true
+# URL
+## If your site is put in a subdirectory, set url as 'http://example.com/child' and root as '/child/'
+url: https://jason23347.github.io
+root: /
+permalink: :year/:month-:day-:title/
+permalink_defaults:
+pretty_urls:
+  trailing_index: true # Set to false to remove trailing 'index.html' from permalinks
+  trailing_html: true # Set to false to remove trailing '.html' from permalinks
 
-# Build settings
-markdown: kramdown
-theme: minima
+# SNS settings
+# 一些社交平台地址，支持以下几种：
+github_username: Jason23347
+
+# Extensions
+## Plugins: https://hexo.io/plugins/
 plugins:
-  - jekyll-feed
+  hexo-generator-feed
+## Themes: https://hexo.io/themes/
+theme: hexo-theme-aircloud
 
-# Exclude from processing.
-# The following items will not be processed, by default. Create a custom list
-# to override the default setting.
-# exclude:
-#   - Gemfile
-#   - Gemfile.lock
-#   - node_modules
-#   - vendor/bundle/
-#   - vendor/cache/
-#   - vendor/gems/
-#   - vendor/ruby/
+# Custom Setting End
+# Directory
+source_dir: source
+public_dir: public
+tag_dir: tags
+archive_dir: archive
+category_dir: categories
+code_dir: downloads/code
+i18n_dir: :lang
+skip_render:
+
+# Category & Tag
+default_category: uncategorized
+category_map:
+tag_map:
+
+search:
+  path: search.json
+  field: post
+
+archive_generator:
+  enabled: true
+  per_page: 8
+  yearly: true
+  monthly: true
+  daily: false
+  order_by: -date
+
+category_generator:
+  per_page: 4
+  order_by: -date
+
+tag_generator:
+  per_page: 8
+  order_by: -date
+
+html_minifier:
+  collapseBooleanAttributes: true
+  collapseWhitespace: true
+  removeComments: true
+  removeEmptyAttributes: true
+  removeScriptTypeAttributes: true
+  removeStyleLinkTypeAttributes: true
+  minifyJS: true
+  minifyCSS: true
+
+cdn_filter:
+  enable: false
+
+text_autospace_filter:
+  enable: true
+  tag_name: 'hl'
+  entry: 'body'
+
+highlight:
+  enable: true
+  line_number: false
