--- a/package.json
+++ b/package.json
@@ -14,12 +14,13 @@
   "dependencies": {
     "ejs-lint": "^1.2.1",
     "hexo": "^5.4.0",
+    "hexo-cdnify": "^1.1.0",
     "hexo-clean-css": "^1.0.0",
     "hexo-deployer-git": "^2.1.0",
     "hexo-deployer-sftp": "^0.4.1",
-    "hexo-filter-cdn": "^1.1.4",
     "hexo-filter-fix-cjk-spacing": "0.0.5",
-    "hexo-filter-text-autospace": "^1.2.2",
+    "hexo-filter-mathjax": "^0.8.0",
+    "hexo-filter-text-autospace": "^1.2.3",
     "hexo-generator-archive": "^1.0.0",
     "hexo-generator-baidu-sitemap": "^0.1.9",
     "hexo-generator-category": "^1.0.0",
